# react-native-quick-buffer

./: .eslintrc  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  react-native-quick-buffer.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/quickbuffer/: QuickBufferModule.java  QuickBufferPackage.java
cpp/: NativeQuickBuffer.cpp  NativeQuickBuffer.hpp  QuickBufferHostObject.cpp  QuickBufferHostObject.hpp  react-native-quick-buffer.cpp  react-native-quick-buffer.h
cpp/utils/: JSIMacros.h  TypedArray.cpp  TypedArray.hpp
example/: app.json  package-lock.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/quickbufferexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/QuickBufferExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/QuickBufferExample.xcodeproj/: project.pbxproj
example/ios/QuickBufferExample.xcodeproj/xcshareddata/xcschemes/: QuickBufferExample.xcscheme
example/ios/QuickBufferExample.xcworkspace/: contents.xcworkspacedata
example/ios/QuickBufferExampleTests/: QuickBufferExampleTests.m
example/src/: App.tsx
ios/: QuickBuffer.h  QuickBuffer.mm
src/: NativeQuickBuffer.ts  index.ts  index.tsx
